# HoekjeC

./: .clang-format  .gitignore  CMakeLists.txt  README.md  capture.sleepy
HoekjeC/: CMakeLists.txt
HoekjeC/Ververs/: Kleur.frag
HoekjeC/bron/HC/: algemeen.c  algemeen.h  koppeling.c  schrift.c  schrift.h
HoekjeC/bron/HC/lezers/: json.c  json.h  lezer.c  lezer.h
HoekjeC/bron/HC/lijsten/: lijst.c  lijst.h  schakellijst.c  schakellijst.h  sleutellijst.c  sleutellijst.h
HoekjeC/bron/HC/verf/: materiaal.c  standaard_ververs.h  verver.c  verver.h
HoekjeC/bron/HC/voorwerpen/: groep.c  groep.h  voorwerp.c  voorwerp.h  voowerp_gegevens.h  vormen.c
HoekjeC/shaders/: kleur.frag  kleur.vert  kleur_voorwerp.frag  kleur_voorwerp.vert
HoekjeC/vormen/: bol.mtl
Kern/: CMakeLists.txt
Kern/Ververs/: Kleur.vert
Kern/bron/HC/: algemeen.c  booleaan.h  kleuren.c  kleuren.h  koppeling.c  koppeling.h  logo.c  logo.h  schrift.h
Kern/bron/HC/lezers/: bestandslezer.c  bestandslezer.h  lezer.c  lezer.h  obj_lezer.h
Kern/bron/HC/lijsten/: lijst.c  lijst.h  schakellijst.c  schakellijst.h  sleutellijst.c  sleutellijst.h
Kern/bron/HC/verf/: materiaal.h  standaard_ververs.c  verver.c  verver.h
Kern/bron/HC/voorwerpen/: groep.c  groep.h  voorwerp.c  voorwerp.h  voowerp_gegevens.h  vorm.c  vorm.h  vormen.c  vormen.h
Kern/bron/HC/wiskunde/: lineair.c  lineair.h
Testen/: CMakeLists.txt  test_json.c  test_lijsten.c  test_schrift.c
Testen/hulpbronnen/: test_schrift.txt
Testen/hulpbronnen/json/: fout.json  lijst.json  schrift.json  voorwerp.json
Voorbeeld/: CMakeLists.txt  Logo.coff  voorbeeld.c
Voorbeeld/Ververs/: normaal.frag  regenboog.frag
Voorbeeld/Ververs/vormen/: vorm.vert
Voorbeeld/bron/: voorbeeld.c
Voorbeeld/shaders/vormen/: vorm.frag
Voorbeeld/vormen/: wagen.mtl
example/: CMakeLists.txt
example/bron/: voorbeeld.c
example/src/: voorbeeld.c
include/GLFW/: glfw3.h  glfw3native.h
include/KHR/: khrplatform.h
include/glad/: glad.h
shaders/: afbeelding.frag  afbeelding.vert  kleur.frag  kleur.vert  kleur_voorwerp.frag  kleur_voorwerp.vert  normaal.frag  normaal.vert  regenboog.frag  regenboog.vert  schilderij.frag  test.frag  voorwerp.frag  voorwerp.vert
src/: bestandslezer.c  bestandslezer.h  koppeling.c  koppeling.h  lijst.c  lijst.h  lineair.c  lineair.h  logo.h  main.c  main.h  materiaal.c  materiaal.h  verver.c  verver.h  voorbeeld.c  voorwerp.c  voorwerp.h  vorm.c  vorm.h
src/HC/: koppeling.c  koppeling.h
src/HC/lezers/: bestandslezer.c  bestandslezer.h
src/HC/lijsten/: lijst.h  sleutellijst.h
src/HC/verf/: materiaal.h  verver.c  verver.h
src/HC/voorwerpen/: voorwerp.c  voorwerp.h
src/HC/wiskunde/: lineair.c
src/lijsten/: lijst.c  lijst.h  schakellijst.c  schakellijst.h
src/oneigen/: glad.c  stb_image.h
src/wiskunst/: lineair.c  lineair.h
